--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,7 @@
-{deps, [{gun, {git, "https://github.com/ninenines/gun.git", {tag, "1.3.2"}}}]}.
+{deps,
+ [jiffy,
+  {yval, {git, "git@gitlab.bdt.tools:forks/yval.git", {branch, "master"}}},
+  {gun, {git, "https://github.com/ninenines/gun.git", {tag, "1.3.2"}}}]}.
 
 {erl_opts,
  [debug_info,
