--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {deps,
  [jiffy,
-  {yval, {git, "git@gitlab.bdt.tools:forks/yval.git", {branch, "master"}}},
+  {yval, {git, "https://github.com/zinid/yval.git", {branch, "master"}}},
   {gun, {git, "https://github.com/ninenines/gun.git", {tag, "1.3.2"}}}]}.
 
 {erl_opts,
@@ -81,6 +81,17 @@
  [{lint,
    [{plugins,
      [{rebar3_lint, "0.1.10"}]}
+   ]},
+  {test,
+   [{erl_opts, [nowarn_export_all,
+                nowarn_missing_spec]},
+    {deps,
+     [meck,
+      {log, {git, "git@gitlab.bdt.tools:libs/log.git",
+             {ref, "3c5c0c301bde516ad34a10d78c39b527b755dea1"}}},
+      {conf, {git, "https://github.com/zinid/conf.git",
+              {ref, "ff1b01e140d6a85ee3d216b4ae9abc10084b5d38"}}},
+      {cowboy, {git, "https://github.com/ninenines/cowboy.git", {tag, "2.7.0"}}}]}
    ]}
  ]}.
 
