BP-51: fix old log repo location

--- a/rebar.config
+++ b/rebar.config
@@ -87,7 +87,7 @@
                 nowarn_missing_spec]},
     {deps,
      [meck,
-      {log, {git, "git@gitlab.bdt.tools:libs/log.git",
+      {log, {git, "https://github.com/bdt-group/log.git",
              {ref, "3c5c0c301bde516ad34a10d78c39b527b755dea1"}}},
       {conf, {git, "https://github.com/zinid/conf.git",
               {ref, "ff1b01e140d6a85ee3d216b4ae9abc10084b5d38"}}},
