USSD-643: Pin meck version for OTP23

--- a/rebar.config
+++ b/rebar.config
@@ -86,7 +86,7 @@
    [{erl_opts, [nowarn_export_all,
                 nowarn_missing_spec]},
     {deps,
-     [meck,
+     [{meck, "0.9.0"},
       {log, {git, "https://github.com/bdt-group/log.git",
              {ref, "3c5c0c301bde516ad34a10d78c39b527b755dea1"}}},
       {conf, {git, "https://github.com/zinid/conf.git",
